style: fix menu list color in dark mode for easy visibility

--- a/src/components/MenuList.scss
+++ b/src/components/MenuList.scss
@@ -43,7 +43,7 @@
   input:checked + label {
     background-color: color.$whitish-color-light;
     .dark-mode & {
-      background-color: color.$grey-like-color;
+      background-color: color.$sky-color-dark;
     }
   }
 }
